Spacing issue on the events page

--- a/trunk/css/all2.css
+++ b/trunk/css/all2.css
@@ -303,7 +303,7 @@ textarea.txt {
 	border-width: 1px 1px 1px 1px;
 	border-color: #C1D8EA;
 	border-style: solid;
-	padding-bottom: 10px;
+	padding: 6px 6px 10px 6px;
 	margin-left: 0px;
 }
 
